app/style/TxHistory.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.indicator {
  padding: 3px 10px 3px 0px;
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  font-size: 12px;
  text-align: right;
  text-transform: capitalize;
  background-position: 6px 50%;
  background-size: 10px;
  background-repeat: no-repeat;
  width: 86px;
  box-sizing: border-box;
  display: inline-block;
  padding-left: 20px;
}

.indicator.pending {
  border-color: var(--input-color);
  background-image: @indicator-pending-icon;
  color: var(--input-color);
}

.indicator.confirmed {
  border-color: var(--accent-color);
  background-image: @indicator-confirmed-icon;
  color: var(--accent-color);
}

.pending-overview-details {
  background-color: rgba(12, 30, 62, 0.0296);
  background-image: @pending-animation;
  background-size: 14px;
  background-position: 50%;
  background-repeat: no-repeat;
  width: 32px;
  height: 46px;
  cursor: pointer;
  text-align: center;
  padding-top: 12px;
}

.tx-history-row-wrapper {
  float: left;
  width: 100%;
}

.is-overview-pending {
  display: flex;
  flex-direction: row !important;
}

.is-row-pending {
  width: 100%;
}

.tx-history-row {
  padding: 18px 15px 9px 16px;
  border-bottom: 1px solid var(--disabled-background-color);
  background-color: var(--background-back-color);
  cursor: pointer;
  transition: all 100ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
  height: 30px;
}

.tx-history-row:hover {
  background-color: var(--tx-history-background-hover);
}

.tx-history-row .icon {
  float: left;
  width: 20px;
  height: 20px;
  background-repeat: no-repeat;
  background-size: 20px 20px;
  margin-right: 15px;
}

.tx-history-row.Send .icon {
  background-image: @minus-small-icon;
}

.tx-history-row.Receive .icon {
  background-image: @plus-small-icon;
}

.tx-history-row.Transfer .icon {
  background-image: @transfer-transaction;
}

.tx-history-row.Ticket .icon {
  background-image: @ticket-live-icon;
}

.tx-history-row.Vote .icon {
  background-image: @ticket-voted-icon;
}

.tx-history-row.Revocation .icon {
  background-image: @ticket-revoked-icon;
}

.tx-history-row.revoked .icon {
  background-image: @ticket-revoked-icon;
}

.tx-history-row.live .icon {
  background-image: @ticket-live-icon;
}

.tx-history-row.voted .icon {
  background-image: @ticket-voted-icon;
}

.tx-history-row.immature .icon {
  background-image: @ticket-immature-icon;
}

.tx-history-row.missed .icon {
  background-image: @ticket-missed-icon;
}

.tx-history-row.expired .icon {
  background-image: @ticket-expired-icon;
}

.tx-history-row.unmined .icon {
  background-image: @ticket-unmined-icon;
}

.transaction-status {
  padding: 1px 0px 0px 0px;
  text-align: right;
}

.transaction-time-date {
  color: var(--input-color-default);
  font-size: 13px;
  text-align: right;
  width: 20%;
  padding: 5px 0px 0px 0px;
}

.transaction-time-date-spacer {
  float: right;
  font-size: 11px;
}

.transaction-account-name {
  font-size: 11px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-right: 20px;
  display: inline-block;
  width: 9em;
}

.transaction-amount-number {
  float: left;
  font-size: 18px;
  font-weight: 600;
  min-width: 120px;
  vertical-align: top;
}

.transaction-stake-type {
  display: inline-block;
  min-width: 120px;
  vertical-align: top;
  padding: 4px 0px 0px 0px;
}

.transaction-amount-hash {
  font-family: Inconsolata, monospace;
  color: var(--stroke-color-hovered);
  font-size: 11px;
  line-height: 11px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  position: absolute;
  max-width: 100px;
  margin: 22px 0px 0px 35px;
}

.stake-transaction-ticket-price {
  margin-right: 20px;
  color: var(--disabled-color);
}

.transaction-stake-type-overview {
  float: left;
  font-family: @font-family-regular;
  color: var(--input-color-default);
  font-size: 15px;
  font-weight: 600;
}

.transaction-stake-info-overview {
  float: left;
}

.transaction-info-price-reward {
  position: absolute;
  font-family: @font-family-monospaced;
  color: var(--stroke-color-hovered);
  font-size: 12px;
  margin-top: 16px;
  margin-left: 35px;
  width: 290px;
}

.stake-transaction-ticket-reward {
  background-image: @ticket-reward-icon;
  background-repeat: no-repeat;
  background-size: 11px 11px;
  background-position: 0px 4px;
  padding-left: 16px;
  color: var(--disabled-color);
}

.transaction-info-overview-days-to-vote {
  background-image: @time-lock-icon;
  background-repeat: no-repeat;
  background-size: 12px 12px;
  background-position: 0px 4px;
  position: fixed;
  right: 121px;
  margin-top: -15px;
  text-align: right;
  padding-left: 14px;
}

.history-content-nest {
  .tx-history-row-wrapper {
    display: flex;
    flex-direction: column;
    float: none;
  }

  .tx-history-row {
    display: flex;
    flex-basis: 80%;
    justify-content: space-between;
    line-height: 12px;
    height: 32px;
    width: 100%;
  }

  .transaction-info {
    flex-grow: 2;
  }

  .transaction-time.date-spacer {
    flex-grow: 1;
  }

  .transaction-time-date-spacer {
    width: 20%;
  }
}

